# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayan"
version = "1.0.0"
description = "a library for get information from Bayan weblogs (https://blog.ir) "
readme = "README.md"
authors = [{ name = "Hossein Ahmadi", email = "4hmadiho55ein@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4",
    "requests",
	"lxml"]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/ho55ein/bayan"


