[metadata]
name = bayan
version = 1.0
author = Hossein Ahmadi
author_email = 4hmadiho55ein@gmail.com
description = a library for get information from Bayan weblogs (https://blog.ir)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ho55ein/bayan
project_urls =
    Bug Tracker = https://github.com/ho55ein/bayan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
